src/snapshots/pythonidae__parser__raw_expressions-3.snap
---
source: src/parser.rs
expression: "grammar::ProgramParser::new().parse(\"((((42))))\")"
---
Ok(
    [
        RawExpr(
            Number(
                42,
            ),
        ),
    ],
)
