src/snapshots/pythonidae__parser__raw_expressions-4.snap
---
source: src/parser.rs
expression: "grammar::ProgramParser::new().parse(\"((42)\")"
---
Err(
    UnrecognizedEof {
        location: 5,
        expected: [
            "\")\"",
            "\"+\"",
            "\"-\"",
        ],
    },
)
