src/snapshots/pythonidae__parser__raw_expressions-6.snap
---
source: src/parser.rs
expression: "grammar::ProgramParser::new().parse(\"(2 * 4) - 3\")"
---
Ok(
    [
        RawExpr(
            Op(
                Op(
                    Number(
                        2,
                    ),
                    Mul,
                    Number(
                        4,
                    ),
                ),
                Sub,
                Number(
                    3,
                ),
            ),
        ),
    ],
)
