src/snapshots/pythonidae__parser__raw_expressions-7.snap
---
source: src/parser.rs
expression: "grammar::ProgramParser::new().parse(\"(2-4) /3\")"
---
Ok(
    [
        RawExpr(
            Op(
                Op(
                    Number(
                        2,
                    ),
                    Sub,
                    Number(
                        4,
                    ),
                ),
                Div,
                Number(
                    3,
                ),
            ),
        ),
    ],
)
